mesa (7.1-1) UNRELEASED; urgency=low

  * Add parallel build support.
  * New upstream development release
    + libGLU now only exports its public interface (closes: #319388)

 -- Julien Cristau <jcristau@debian.org>  Mon, 04 Aug 2008 09:36:31 +0200

mesa (7.1~rc3-1) experimental; urgency=low

  [ Julien Cristau ]
  * New upstream release candidate (updated to git commit 4fab47b1).
  * Build against libdrm >= 2.3.1.
  * 04_osmesa_version.diff: fix libOSMesa versioning, to revert accidental
    SONAME bump.

  [ Timo Aaltonen ]
  * Refresh patches, and drop obsolete 00_create-libdir.patch and
    01_fix-makefile.patch.
  * Build-depend on x11proto-dri2-dev.
  * Drop mesa-swx11-source.
  * Add dri_interface.h to mesa-common-dev.
  * Add gl.pc to libgl1-mesa-dev
  * rules: Replace the old build system with the new autotools-based 
    system.
  * Run autoreconf before building the various flavours..
  * Add automake & autoconf to build-deps.
  * Use --enable-glx-tls for dri.

 -- Julien Cristau <jcristau@debian.org>  Sun, 13 Jul 2008 19:41:42 +0200

mesa (7.0.3-4) unstable; urgency=low

  * Pull from mesa_7_0_branch (2ac4919d).
  * Put back our configs/ changes into the .diff.gz since choose-configs
    needs them before quilt is invoked. Put 04_cleanup-osmesa-configs.patch
    there as well for #485161.

 -- Brice Goglin <bgoglin@debian.org>  Wed, 18 Jun 2008 20:59:14 +0200

mesa (7.0.3-3) unstable; urgency=low

  * Pull from mesa_7_0_branch (718724de).
    + Fix intel_batchbuffer_space on i965, closes: #455817.
    + Fix busy error in i915_wait_irq for real now, closes: #467319.
  * Move our configs/ changes from the .diff.gz into our quilt patches,
    with 04_cleanup-osmesa-configs.patch renamed into 04_debian-configs.patch,
    closes: #485161.

 -- Brice Goglin <bgoglin@debian.org>  Tue, 17 Jun 2008 20:00:51 +0200

mesa (7.0.3-2) unstable; urgency=low

  * Pull from mesa_7_0_branch (03447de3).