@@ -3,6 +3,7 @@ mesa (7.1-1) UNRELEASED; urgency=low
   * Add parallel build support.
   * New upstream development release
     + libGLU now only exports its public interface (closes: #319388)
+  * Some more parallel build updates.
 
  -- Julien Cristau <jcristau@debian.org>  Mon, 04 Aug 2008 09:36:31 +0200
 
